--- a/wizards/WizardsWeb/Views/Combat/CombatStage.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/CombatStage.cshtml
@@ -2,29 +2,34 @@
 
 <body class="bg-arena not-selectable" 
       style="background-image: url(/GraphicAssets/ArenaBackground/StageBackground-@(Model.BackgroundImageNumber).jpg);">
-    <div class="col-12 p-4">
-        <div class="row">
+<div class="col-12 p-4">
+    <div class="row">
 
-            <!-- HERO Left Section -->
-            <div class="col-1 p-1 hero-section-width" style="width: 420px;">
-                <partial name="_HeroSection" model="@Model"/>
-            </div>
+        <!-- HERO Left Section -->
+        <div class="col-1 p-1 hero-section-width" style="width: 420px;">
+            <partial name="_HeroSection" model="@Model"/>
+        </div>
 
-            <!-- REPORT/ACTIONS Center Section -->
-            <div class="col p-1">
-                <div class="col-12 text-center bg-paper py-2 h4">@Model.Name</div>
-                <div class="center-section">
-                    <partial name="_EnemyHPBar" model="@Model.EnemySection"/>
-                    <partial name="_LogTable" model="@Model"/>
-                    <partial name="_HeroHPBar" model="Model.HeroSection"/>
-                    <partial name="_HeroSkillBar" model="Model"/>
-                </div>
-            </div>
-
-            <!-- ENEMY Right Section -->
-            <div class="col-1 p-1" style="width: 477px;">
-                <partial name="_EnemySection" model="@Model"/>
+        <!-- REPORT/ACTIONS Center Section -->
+        <div class="col p-1">
+            <div class="col-12 text-center bg-paper py-2 h4">@Model.Name</div>
+            <div class="center-section">
+                <partial name="_EnemyHPBar" model="@Model.EnemySection"/>
+                <partial name="_LogTable" model="@Model"/>
+                <partial name="_HeroHPBar" model="Model.HeroSection"/>
+                <partial name="_HeroSkillBar" model="Model"/>
             </div>
         </div>
+
+        <!-- ENEMY Right Section -->
+        <div class="col-1 p-1" style="width: 477px;">
+            <partial name="_EnemySection" model="@Model"/>
+        </div>
     </div>
+</div>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous">
+</script>
