--- a/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
@@ -3,11 +3,19 @@
 @model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
 <div class="col-12 text-center bg-paper py-2 h4">@Model.EnemySection.Name</div>
+@{
+    var enemySectionClasses = "";
+
+    if (Model.Status == StageStatus.ConcludedHeroWins)
+    {
+        enemySectionClasses = " participant-dead";
+    }
+}
 <div class="col-12 participant-container">
     
-    <img class="not-dragable-image" src="/Images/Bosses/Enemy-@(Model.EnemySection.AvatarImageNumber).png" width="100%" height="100%">
+    <img class="not-dragable-image @enemySectionClasses" src="/Images/Bosses/Enemy-@(Model.EnemySection.AvatarImageNumber).png" width="100%" height="100%">
     
-    @if (Model.EnemySection.IsStunned)
+    @if (Model.EnemySection.IsStunned && Model.Status == StageStatus.DuringCombat)
     {
         <div class="round-results-info-text stunned-participant-text">STUNNED</div>
     }
@@ -22,30 +30,73 @@
         <div class="round-results-info-text boss-blocked-text">BLOCKED</div>
     }
     
-    @if (!Model.WasResultShown)
+    @if (!Model.WasResultShown && Model.LastRoundResult.HeroCombatStatus == HeroCombatStatus.HitsSuccessfully)
     {
         <div class="round-results-info-text on-boss-damage-text">@Model.LastRoundResult.EnemyDamageTaken</div>
     }
     
-    @if (!Model.WasResultShown && Model.LastRoundResult.EnemyHealthRecovered > 0)
+    @if (!Model.WasResultShown && Model.LastRoundResult.HeroCombatStatus == HeroCombatStatus.MissesAttack)
+    {
+        <div class="round-results-info-text on-boss-damage-text" style="font-size: 30px;">miss</div>
+    }
+    
+    @if (!Model.WasResultShown && Model.LastRoundResult.EnemyHealthRecovered > 0 && Model.Status == StageStatus.DuringCombat)
     {
         <div class="round-results-info-text boss-heal-text">@Model.LastRoundResult.EnemyHealthRecovered</div>
     }
     
-    @if (Model.EnemySection.SelectedSkillType == EnemySkillType.Charge)
+    @if (!Model.EnemySection.IsStunned)
     {
-        <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-charge.png">
-    }
-    else if (Model.EnemySection.SelectedSkillType == EnemySkillType.Deadly)
-    {
-        <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-deadly.png">
-    }
-    else if (Model.EnemySection.SelectedSkillStunning)
-    {
-        <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-stunning.png">
+        @if (Model.EnemySection.SelectedSkillType == EnemySkillType.Charge && Model.Status == StageStatus.DuringCombat)
+        {
+            <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-charge.png">
+        }
+        else if (Model.EnemySection.SelectedSkillType == EnemySkillType.Deadly && Model.Status == StageStatus.DuringCombat)
+        {
+            <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-deadly.png">
+        }
+        else if (Model.EnemySection.SelectedSkillStunning && Model.Status == StageStatus.DuringCombat)
+        {
+            <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-stunning.png">
+        }
     }
 </div>
+@if (Model.Status == StageStatus.DuringCombat)
+{
+    <div class="col-12" style="color: #ffffff;">
+        <div class="exit-match-button-container">
+            <!-- Button trigger modal -->
+            <button type="button" class="gbtn gbtn-danger gbtn-lg"
+               style="width: 300px; height: 80px; padding-top: 20px; font-weight: bold; font-size: 25px;"
+               data-bs-toggle="modal" data-bs-target="#confirmExit">
+                Abort Match
+            </button>
+        </div>
+        
+    </div>
 
-<div class="col-12 text-center" style="color: #ffffff;">
-    EXIT BUTTON
-</div>
+    <!-- Modal -->
+    <div class="modal fade" id="confirmExit" tabindex="-1" aria-labelledby="confirmExitLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header alert alert-danger">
+                    <div class="col-12 text-center h3">
+                        <span>Abort match</span>
+                    </div>
+                </div>
+                <div class="modal-body text-danger font-weight-bold h5 text-center">
+                    <p>Dou you really want to abort this match? </p><br/>
+                    <p>You will lost 1 point of your Daily Reward Energy and this match will be counted as lost!</p>
+                </div>
+                <div class="modal-footer">
+                    <a type="button" class="gbtn gbtn-danger" asp-controller="Combat" asp-action="FinishMatch">
+                        Yes
+                    </a>
+                    <button type="button" class="gbtn gbtn-accept" data-bs-dismiss="modal">
+                        Don't Abort
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
