--- a/wizards/WizardsWeb/Views/Combat/_HeroSection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_HeroSection.cshtml
@@ -1,21 +1,41 @@
-﻿@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
+﻿@using Wizards.Core.Model.WorldModels.Enums
+@using Wizards.Core.Model.WorldModels.Properties.Enums
+@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
 <div class="col-12 text-center bg-paper py-2 h4">@Model.HeroSection.NickName</div>
+@{
+    var heroSectionClasses = "";
+
+    if (Model.Status == StageStatus.ConcludedEnemyWins)
+    {
+        heroSectionClasses = " participant-dead";
+    }
+}
 <div class="col-12 participant-container">
+
+    <img class="not-dragable-image@(heroSectionClasses)" src="/Images/Hero/Avatars/Wizard-@(Model.HeroSection.AvatarImageNumber).png" width="100%" height="100%">
     
-    <img class="not-dragable-image" src="/Images/Hero/Avatars/Wizard-@(Model.HeroSection.AvatarImageNumber).png" width="100%" height="100%">
-    
-    @if (Model.HeroSection.IsStunned)
+    @if (Model.Status == StageStatus.ConcludedEnemyWins)
+    {
+        <div class="round-results-info-text dead-participant-text">DEFEATED</div>
+    }
+
+    @if (Model.HeroSection.IsStunned && Model.Status == StageStatus.DuringCombat)
     {
         <div class="round-results-info-text stunned-participant-text">STUNNED</div>
     }
     
-    @if (!Model.WasResultShown)
+    @if (!Model.WasResultShown && Model.LastRoundResult.EnemyCombatStatus == EnemyCombatStatus.HitsSuccessfully)
     {
         <div class="round-results-info-text on-hero-damage-text">@Model.LastRoundResult.HeroDamageTaken</div>
     }
     
-    @if (!Model.WasResultShown && Model.LastRoundResult.HeroHealthRecovered > 0)
+    @if (!Model.WasResultShown && Model.LastRoundResult.EnemyCombatStatus == EnemyCombatStatus.MissesAttack)
+    {
+        <div class="round-results-info-text on-hero-damage-text" style="font-size: 30px;">miss</div>
+    }
+
+    @if (!Model.WasResultShown && Model.LastRoundResult.HeroHealthRecovered > 0 && Model.Status == StageStatus.DuringCombat)
     {
         <div class="round-results-info-text hero-heal-text">@Model.LastRoundResult.HeroHealthRecovered</div>
     }
