--- a/wizards/WizardsWeb/Views/Combat/_LogTable.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_LogTable.cshtml
@@ -2,23 +2,27 @@
 
 
 <div class="col-12 bg-paper-semi-transparent p-3 table-section">
-    <table class="table-container">
-        <thead>
-            <tr>
-                <th>Round</th>
-                <th>@Model.HeroSection.NickName</th>
-                <th>@Model.EnemySection.Name</th>
-            </tr>
-        </thead>
-        <tbody>
-        @foreach (var row in Model.RoundLogs)
-        {
-            <tr>
-                <th>@row.RoundNumber</th>
-                <td>@row.HeroActionLog</td>
-                <td>@row.EnemyActionLog</td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-bordered border-dark">
+                <thead class="text-center">
+                <tr>
+                    <th>Round</th>
+                    <th>@Model.HeroSection.NickName</th>
+                    <th>@Model.EnemySection.Name</th>
+                </tr>
+                </thead>
+                <tbody>
+                @foreach (var row in Model.RoundLogs)
+                {
+                    <tr>
+                        <th class="text-center">@row.RoundNumber</th>
+                        <td>@row.HeroActionLog</td>
+                        <td>@row.EnemyActionLog</td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
