Add missing properties; Correct Migration; Complement communicates when Enemy dies; Remove issue with "no item" hero in damaging hero items after battle;

--- a/wizards/WizardsWeb/Views/Combat/_SkillPopUp.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_SkillPopUp.cshtml
@@ -9,7 +9,7 @@
             <h6>@Model.Type</h6>
         </div>
         <hr>
-        @if (Model.Description is not null)
+        @if (Model.Description is not null && Model.Description.Length > 0)
         {
             <p>@Model.Description</p>
             <hr>
