--- a/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
@@ -9,7 +9,7 @@
         <div class="col-3">
             @if (Model.GetRepairCostForAllItems() >= 1)
             {
-                <button type="button" class="gbtn gbtn-technical gbtn-sm align-content-end" data-bs-toggle="modal" data-bs-target="#repair-all">
+                <button type="button" class="gbtn gbtn-magical gbtn-sm align-content-end" data-bs-toggle="modal" data-bs-target="#repair-all">
                     Repair all items
                 </button>
             }
