--- a/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
@@ -15,6 +15,11 @@
     
     <img class="not-dragable-image @enemySectionClasses" src="/Images/Bosses/Enemy-@(Model.EnemySection.AvatarImageNumber).png" width="100%" height="100%">
     
+    @if (Model.Status == StageStatus.ConcludedHeroWins)
+    {
+        <div class="round-results-info-text dead-participant-text">DEFEATED</div>
+    }
+
     @if (Model.EnemySection.IsStunned && Model.Status == StageStatus.DuringCombat)
     {
         <div class="round-results-info-text stunned-participant-text">STUNNED</div>
