--- a/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
@@ -1,2 +1,31 @@
-﻿@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
+﻿@using Wizards.Core.Model.WorldModels.Enums
+@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
+@if (Model.Status == StageStatus.ConcludedEnemyWins || Model.Status == StageStatus.ConcludedHeroWins)
+{
+    var victoryOrDeath = "";
+    if (Model.Status == StageStatus.ConcludedEnemyWins)
+    {
+        victoryOrDeath = "failed";
+    }
+    if (Model.Status == StageStatus.ConcludedHeroWins)
+    {
+        victoryOrDeath = "victory";
+    }
+
+    <div class="concluded-match-container">
+        <img class="match-result" src="GraphicAssets/BattleGui/Conclude-@(victoryOrDeath).png" width="100%" height="100%"/>
+        <audio autoplay="true">
+            <source src="Sound/Match-@(victoryOrDeath).mp3">
+        </audio>
+        @if (!Model.IsTraining && Model.Status == StageStatus.ConcludedHeroWins)
+        {
+            <div class="claimed-rewards">
+                <span style="font-weight: bold; font-size: 35px">Claimed Rewards</span>
+                <hr/>
+                <span class="reward-text">Gold: @Model.EnemySection.GoldReward</span>
+                <hr/>
+            </div>
+        }
+    </div>
+}
