Add Rank Points Reward; Add Abort Match method in StageService; Improve Enemy in Seed Data for more "realistic" battle; Correct issue that occures when enemy was stunned and succesfully heals himself

--- a/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
@@ -94,11 +94,11 @@
                     <p>You will lost 1 point of your Daily Reward Energy and this match will be counted as lost!</p>
                 </div>
                 <div class="modal-footer">
-                    <a type="button" class="gbtn gbtn-danger" asp-controller="Combat" asp-action="FinishMatch">
-                        Yes
+                    <a type="button" class="gbtn gbtn-danger" asp-controller="Combat" asp-action="AbortMatch">
+                        Abort Match
                     </a>
                     <button type="button" class="gbtn gbtn-accept" data-bs-dismiss="modal">
-                        Don't Abort
+                        Continue Match
                     </button>
                 </div>
             </div>
