--- a/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
@@ -15,15 +15,27 @@
 
     <div class="concluded-match-container">
         <img class="match-result" src="GraphicAssets/BattleGui/Conclude-@(victoryOrDeath).png" width="100%" height="100%"/>
+        @*
         <audio autoplay="true">
             <source src="Sound/Match-@(victoryOrDeath).mp3">
         </audio>
-        @if (!Model.IsTraining && Model.Status == StageStatus.ConcludedHeroWins)
+        *@
+
+        @if (Model.Status == StageStatus.ConcludedHeroWins)
         {
             <div class="claimed-rewards">
                 <span style="font-weight: bold; font-size: 35px">Claimed Rewards</span>
                 <hr/>
-                <span class="reward-text">Gold: @Model.EnemySection.GoldReward</span>
+                @if (!Model.IsTraining)
+                {
+                    <span class="reward-text">Gold: @Model.EnemySection.GoldReward</span>
+                    <br/>
+                    <span class="reward-text">Rank Points: @Model.EnemySection.RankPointsReward</span>
+                }
+                else
+                {
+                    <span class="reward-text">There is no rewards for training match</span>
+                }
                 <hr/>
             </div>
         }
