--- a/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
@@ -15,11 +15,10 @@
 
     <div class="concluded-match-container">
         <img class="match-result" src="GraphicAssets/BattleGui/Conclude-@(victoryOrDeath).png" width="100%" height="100%"/>
-        @*
-        <audio autoplay="true">
+        
+        <audio id="Famfare" autoplay="true">
             <source src="Sound/Match-@(victoryOrDeath).mp3">
         </audio>
-        *@
 
         @if (Model.Status == StageStatus.ConcludedHeroWins)
         {
@@ -40,4 +39,11 @@
             </div>
         }
     </div>
+
+    <script>
+        function audioVolume() {
+            document.getElementById("Famfare").volume = 0.15;
+        }
+        window.onload = audioVolume;
+    </script>
 }
