General visual improvement; Change some css styles;

--- a/wizards/WizardsWeb/Views/Hero/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Delete.cshtml
@@ -36,8 +36,8 @@
                                     <span asp-validation-for="ConfirmNickName" class="text-danger"></span>
                                 </div>
                                 <div class="btn-group btn-block">
-                                    <a type="button" class="btn btn-outline-success" asp-action="Details" asp-controller="Player">Cancel</a>
-                                    <input type="submit" value="Delete" class="btn btn-outline-danger" />
+                                    <input type="submit" value="Delete" class="gbtn gbtn-danger" />
+                                    <a type="button" class="gbtn gbtn-accept" asp-action="Details" asp-controller="Player">Cancel</a>
                                 </div>
                             </form>
                         </li>
