--- a/wizards/WizardsWeb/Views/Player/Delete.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Delete.cshtml
@@ -62,8 +62,8 @@
                             <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
                         </div>
                         <div class="btn-group btn-block">
-                            <a type="button" class="btn btn-outline-success" asp-action="Edit">Cancel</a>
-                            <input type="submit" value="Delete Account" class="btn btn-outline-danger" />
+                            <input type="submit" value="Delete Account" class="gbtn gbtn-danger" />
+                            <a type="button" class="gbtn gbtn-accept" asp-action="Edit">Cancel</a>
                         </div>
                     </form>
                 </div>
