--- a/wizards/WizardsWeb/Views/Exploration/TitanRaids.cshtml
+++ b/wizards/WizardsWeb/Views/Exploration/TitanRaids.cshtml
@@ -5,14 +5,20 @@
 }
 
 <div class="row">
-    <div class="col-12 p-1 mb-2 bg-paper-color">
+    <div class="col-12 p-1 mb-3 bg-paper-color rounded">
         <div class="row">
-            <div class="col-9 px-3 py-1">
-                <h4 class="font-weight-bold">Titan Rides</h4>
+            <div class="col-8 px-3 py-1">
+                <h4 class="font-weight-bold pl-3 pt-1">Titan Rides</h4>
             </div>
-            <div class="col-3 px-3 py-1">
+            <div class="col-4 px-2 py-1">
                 <a asp-controller="Exploration" asp-action="Index" class="gbtn gbtn-action">
-                    Exit To Exploration Center
+                    Exploration Center
+                </a>
+                <a asp-controller="Inventory" asp-action="Index" class="gbtn gbtn-action">
+                    Inventory
+                </a>
+                <a asp-controller="Merchant" asp-action="Index" class="gbtn gbtn-action">
+                    Merchant
                 </a>
             </div>
         </div>
@@ -20,7 +26,7 @@
 </div>
 
 <div class="row">
-    <div class="col-12 bg-paper-color p-1">
+    <div class="col-12 bg-paper-color p-1 rounded">
         <ul class="nav nav-pills" id="pills-tab" role="tablist">
             <li class="nav-item p-2" role="presentation">
                 <button class="nav-link active" id="pills-tier1-tab" data-bs-toggle="pill" data-bs-target="#pills-tier1" type="button" role="tab" aria-controls="pills-tier1" aria-selected="true">Tier 1</button>
