--- a/wizards/WizardsWeb/Views/Exploration/_TierTabContent.cshtml
+++ b/wizards/WizardsWeb/Views/Exploration/_TierTabContent.cshtml
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col-3 p-0 pr-4">
-        <div class="bg-paper-color p-3" style="width: 100%; height: 100%">
+        <div class="bg-paper-color p-3 rounded" style="width: 100%; height: 100%">
             <div class="nav nav-pills" id="enemy-pills-tab" role="tablist">
                 @{
                     var count = 0;
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="col-9 bg-paper-color p-4">
+    <div class="col-9 bg-paper-color p-4 rounded">
         <div class="tab-content" id="enemy-pills-tabContent">
             @{
                 count = 0;
