--- a/wizards/WizardsWeb/Views/Home/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Index.cshtml
@@ -8,8 +8,9 @@
             background-image: url("/Images/Tapeta-3.jpg");
             background-repeat: no-repeat;
             background-attachment: inherit;
-            background-size: contain;
-            height: 650px;
+            background-size:contain;
+            width: 100%;
+            height: 750px;
         }
     </style>
 </head>
