--- a/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
@@ -46,12 +46,12 @@
     <div class="modal fade" id="repair-all" aria-hidden="true" aria-labelledby="label-repair-all" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header table-info">
+                <div class="modal-header bg-paper-header">
                     <div class="col-12 text-center">
                         <h2>Repairing all items</h2>
                     </div>
                 </div>
-                <div class="modal-body alert alert-warning">
+                <div class="modal-body bg-paper-color">
                     <div class="h3 text-center text-dark">
                         <span>Do you want to repair all items (including equipped)</span><br/>
                         <span>for </span>
@@ -59,7 +59,7 @@
                         <span> Gold?</span>
                     </div>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer bg-paper-color">
                     <div class="btn-group col-12">
                         <button class="gbtn gbtn-danger" data-bs-dismiss="modal">
                             No
@@ -80,12 +80,12 @@
     <div class="modal fade" id="repair-equipped" aria-hidden="true" aria-labelledby="label-repair-equipped" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header table-info">
+                <div class="modal-header bg-paper-header">
                     <div class="col-12 text-center">
                         <h2>Repairing all equipped items</h2>
                     </div>
                 </div>
-                <div class="modal-body alert alert-warning">
+                <div class="modal-body bg-paper-color">
                     <div class="h3 text-center text-dark">
                         <span>Do you want to repair all equipped items for </span>
                         <span class="font-weight-bold">
@@ -94,7 +94,7 @@
                         <span> Gold?</span>
                     </div>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer bg-paper-color">
                     <div class="btn-group col-12">
                         <button class="gbtn gbtn-danger" data-bs-dismiss="modal">
                             No
