--- a/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
+++ b/wizards/WizardsWeb/Views/Player/EditPassword.cshtml
@@ -40,10 +40,10 @@
                                     <input asp-for="ConfirmPassword" class="form-control" />
                                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                                 </div>
-                            </div>
-                            <div class="btn-group btn-block">
-                                <a type="button" class="btn btn-outline-warning" asp-action="Edit">Back to Edit</a>
-                                <input type="submit" value="Change Password" class="btn btn-outline-primary" />
+                                <div class="btn-group btn-block">
+                                    <input type="submit" value="Change Password" class="gbtn gbtn-accept" />
+                                    <a type="button" class="gbtn gbtn-action" asp-action="Edit">Back to Edit</a>
+                                </div>
                             </div>
                         </form>
                     </div>
