--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -41,10 +41,10 @@
 <body class="bg-leather">
     <div class="cover-container d-flex w-100 h-100 mx-auto bg-brown flex-column">
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-brown text-white box-shadow">
+            <nav class="navbar navbar-expand-sm navbar-light bg-brown text-white box-shadow">
                 <div class="container">
 
-                    <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:20%; width: 20%" />
+                    <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:75px; width: auto" />
 
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -79,21 +79,14 @@
 
         <div class="container-fluid bg-leather d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-
-            <main class="col bg-leather">
-                <div class="bg-leather p-3">
-                    <div class="container bg-leather">
-                        <main role="main" class="pb-3">
-                            @RenderBody()
-                        </main>
-                    </div>
-                </div>
-            </main>
+            <div class="container">
+                @RenderBody()
+            </div>
 
         </div>
 
-        <footer class="footer mt-auto text-golden-dark navbar-light bg-brown box-shadow">
-            <div class="container" style='text-align:center'>
+        <footer class="footer mt-auto text-golden-dark bg-brown box-shadow">
+            <div style='text-align:center'>
                 &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 2.0
             </div>
         </footer>
