--- a/wizards/WizardsWeb/Views/Exploration/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Exploration/Index.cshtml
@@ -20,7 +20,7 @@
     <div class="card bg-paper-color">
         <div class="row" >
             <div class="col-3">
-                <img src="/Images/Exploration/CenterIcons/Titan-Raids.png" class="rounded-left" width="100%" height="100%">
+                <img src="/Images/Exploration/CenterIcons/Titan-Raids.png" class="rounded-left static-image-not-dragable" width="100%" height="100%">
             </div>
             <div class="col-9">
                 <div class="card-body">
@@ -40,7 +40,7 @@
     <div class="card bg-paper-color">
         <div class="row" >
             <div class="col-3">
-                <img src="/Images/Exploration/CenterIcons/Dungeons.png" class="rounded-left" width="100%" height="100%">
+                <img src="/Images/Exploration/CenterIcons/Dungeons.png" class="rounded-left static-image-not-dragable" width="100%" height="100%">
             </div>
             <div class="col-9">
                 <div class="card-body">
