--- a/wizards/WizardsWeb/Views/Player/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Create.cshtml
@@ -11,14 +11,14 @@
         <div class="card bg-paper-color" style="height: 750px">
             <div class="row">
                 <div class="col-7" style="height: 750px">
-                    <img src="~/Images/Tapeta-2.jpg" class="rounded-left" style="height: 100%; width: 100%" />
+                    <img src="~/Images/Tapeta-2.jpg" class="rounded-left static-image-not-dragable" style="height: 100%; width: 100%" />
                 </div>
 
                 <div class="col-5 d-flex" style="height: 750px">
                     <div class="card-body mx-5">
 
                         <div class="text-center pb-5">
-                            <img src="~/Images/logo.png" alt="Site Logo" style="height: 30%; width: 30%" />
+                            <img src="~/Images/logo.png" class="static-image-not-dragable" alt="Site Logo" style="height: 30%; width: 30%" />
                         </div>
 
                         <form asp-action="Create">
