--- a/wizards/WizardsWeb/Views/Player/Edit.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Edit.cshtml
@@ -20,7 +20,7 @@
                 <div class="col-md-12">
                     <form asp-action="Edit">
                         <div class="px-3 py-2">
-                            <a type="button" class="gbtn gbtn-action" asp-action="EditPassword">Edit Password</a>
+                            <a type="button" class="gbtn gbtn-action" asp-action="EditPassword">Change Password</a>
                         </div>
                         <div class="px-3 py-2 pb-4">
                             <a type="button" class="gbtn gbtn-danger" asp-action="Delete">Delete Account</a>
