--- a/wizards/WizardsWeb/Views/Player/Login.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Login.cshtml
@@ -14,7 +14,7 @@
                         <div class="card-body p-md-5 mx-md-4">
 
                             <div class="text-center mb-5 pb-2">
-                                <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:30%; width:30%" />
+                                <img src="~/Images/logo.png" class="static-image-not-dragable" alt="Site Logo" style="height:30%; width:30%" />
                             </div>
 
                             <form asp-action="Login">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                        <img src="~/Images/Tapeta-1.jpg" alt="Site Logo" style="height:100%; width: 100%;" />
+                        <img src="~/Images/Tapeta-1.jpg" class="static-image-not-dragable rounded-right" alt="Site Logo" style="height:100%; width: 100%;" />
                     </div>
                 </div>
             </div>
