--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -42,10 +42,10 @@
                         var avatar = $"Images/Hero/Avatars/Wizard-{hero.AvatarImageNumber}.png";
                         <tr>
                             <td class="align-middle">
-                                <img src="~/@avatar" width="150px" height="auto" />
+                                <img src="~/@avatar" class="static-image-not-dragable" width="150px" height="auto" />
                             </td>
                             <td class="align-middle text-center">
-                                <img src="~/Images/Hero/Professions/@(hero.Profession).png" width="80px" height="80px"/>
+                                <img src="~/Images/Hero/Professions/@(hero.Profession).png" class="static-image-not-dragable" width="80px" height="80px"/>
                                 <br class="p-0 m-0"/>
                                 <span>@hero.Profession</span>
                             </td>
