--- a/wizards/WizardsWeb/Views/Exploration/_EnemyIndexDetails.cshtml
+++ b/wizards/WizardsWeb/Views/Exploration/_EnemyIndexDetails.cshtml
@@ -13,8 +13,8 @@
 </div>
 <hr class="m-0 p-0"/>
 <div class="row">
-    <div class="col-6">
-        <img src="/Images/Bosses/Enemy-@(Model.AvatarImageNumber).png" width="90%" height="auto" />
+    <div class="col-6 text-center">
+        <img src="/Images/Bosses/Enemy-@(Model.AvatarImageNumber).png" class="static-image-not-dragable" width="90%" height="auto" />
     </div>
     <div class="col-6">
         <div class="row">
