--- a/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
@@ -13,14 +13,14 @@
 
             <li class="list-group-item bg-paper-color">
                 <div class="justify-content-start">
-                    <img class="p-0 m-0" src="~/@Model.ProfessionImageAddress" width="70" height="70" />
+                    <img class="p-0 m-0 static-image-not-dragable" src="~/@Model.ProfessionImageAddress" width="70" height="70" />
                     <span class="pt-4 px-3 h4 font-weight-bold">@Model.Profession.ToString()</span>
                 </div>
             </li>
 
             <li class="list-group-item bg-paper-color justify-content-center">
                 <div class="col-md-12">
-                    <img class="p-0 m-0" src="~/@Model.AvatarImageAddress" width="100%" height="100%" />
+                    <img class="p-0 m-0 static-image-not-dragable" src="~/@Model.AvatarImageAddress" width="100%" height="100%" />
                 </div>
             </li>
 
