--- a/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using WizardsWeb.Extensions
 @model WizardsWeb.ModelViews.Inventory.InventoryModelView
 
-<div class="col-12">
+<div class="col-12 p-0 m-0">
     <div class="row">
         <div class="col-9">
             <h4>Inventory</h4>
