Improve Inventory; Add item icons; Add paper-header texture; modify styles;

--- a/wizards/WizardsWeb/Views/Item/_ItemEnduranceBar.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemEnduranceBar.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-12">
-        <div class="progress">
+        <div class="progress" style="height: 20px">
             <div class="progress-bar text-dark font-weight-bold @Model.GetEnduranceBarColorClass()"
                  role="progressbar"
                  aria-label="Example with label"
