--- a/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
+++ b/wizards/WizardsWeb/Views/Item/_ItemIndexDetails.cshtml
@@ -6,10 +6,10 @@
     <thead>
         <tr>
             <th>
-                <label asp-for="FirstOrDefault().Name"></label>
+                <label>Icon</label>
             </th>
             <th>
-                <label asp-for="FirstOrDefault().Type"></label>
+                <label asp-for="FirstOrDefault().Name"></label>
             </th>
             <th>
                 <label asp-for="FirstOrDefault().Tier"></label>
@@ -46,27 +46,29 @@
         {
             <tr class="table table-@item.GetItemTierColor()">
                 <td>
+                    <img src="@item.GetItemIconAddress()" width="50px" height="50px"/>
+                </td>
+                <td>
                     <span class="font-weight-bold">@item.Name</span>
+                    <br class="p-0 m-0"/>
+                    <span style="font-size: 14px; font-style: italic">@item.Type.ToString()</span>
                 </td>
-                <td>
-                    <span class="text-center">@item.Type.ToString()</span>
-                </td>
-                <td>
-                    <span class="text-center">@item.Tier</span>
+                <td class="text-center align-middle">
+                    <span class="text-center">@($"{item.Tier}")</span>
                 </td>
                 @if (Model.CanShowEndurance())
                 {
-                    <td><partial name="~/Views/Item/_ItemEnduranceBar.cshtml" model="@item" /></td>
+                    <td class="text-center align-middle"><partial name="~/Views/Item/_ItemEnduranceBar.cshtml" model="@item" /></td>
                 }
                 else if (Model.CanShowBuyPrice())
                 {
-                    <td>@($"{item.BuyPrice:#,##0}")</td>
+                    <td class="text-center align-middle">@($"{item.BuyPrice:#,##0}")</td>
                 }
                 else if (Model.CanShowSellPrice())
                 {
-                    <td>@($"{item.SellPrice:#,##0}")</td>
+                    <td class="text-center align-middle">@($"{item.SellPrice:#,##0}")</td>
                 }
-                <td>
+                <td class="text-center align-middle">
                     <div class="btn-group">
                         <!-- Button trigger modal for Details -->
                     <a class="gbtn gbtn-action gbtn-sm" data-bs-toggle="modal" href="#details-@item.Id">Details</a>
