Add icons for all Enemy Skill Types (except attack); Add new migration; Change "stunning" property into one of Enemy skill types

--- a/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_EnemySection.cshtml
@@ -52,17 +52,25 @@
     
     @if (!Model.EnemySection.IsStunned)
     {
-        @if (Model.EnemySection.SelectedSkillType == EnemySkillType.Charge && Model.Status == StageStatus.DuringCombat)
+        @if (Model.EnemySection.SelectedSkillType == EnemySkillType.StrongAttack && Model.Status == StageStatus.DuringCombat)
+        {
+            <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-strong.png">
+        }
+        else if (Model.EnemySection.SelectedSkillType == EnemySkillType.Stunning && Model.Status == StageStatus.DuringCombat)
+        {
+            <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-stunning.png">
+        }
+        else if (Model.EnemySection.SelectedSkillType == EnemySkillType.Charge && Model.Status == StageStatus.DuringCombat)
         {
             <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-charge.png">
+        }
+        else if (Model.EnemySection.SelectedSkillType == EnemySkillType.Heal && Model.Status == StageStatus.DuringCombat)
+        {
+            <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-heal.png">
         }
         else if (Model.EnemySection.SelectedSkillType == EnemySkillType.Deadly && Model.Status == StageStatus.DuringCombat)
         {
             <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-deadly.png">
-        }
-        else if (Model.EnemySection.SelectedSkillStunning && Model.Status == StageStatus.DuringCombat)
-        {
-            <img class="enemy-skill-icon" src="~/GraphicAssets/BattleGui/enemy-stunning.png">
         }
     }
 </div>
